[BUGFIX] Select2 background image visible in high resolution
In `I152f6ab8734f5ade6edc56d0ff14d8f55d5ef244` a regression was
introduced for high resolution displays since the removed background
was shown again due to usage of "!important" in the high resolution
styles.

Releases: master, 2.0, 1.2
Original-Commit-Hash: f682c5161d6f91f6d89da15f910cfb1624c6b607

--- a/TYPO3.Neos/Resources/Private/Styles/Shared/_Select2.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Shared/_Select2.scss
@@ -174,7 +174,7 @@
 			top: 0;
 			height: $unit;
 			width: $unit;
-			background: none;
+			background: none !important;
 			border-left: 1px solid $grayDark;
 			color: white;
 			text-decoration: none;
